Исправление бага связанного с IF