@@ -5,58 +5,57 @@ import com.github.stefvanschie.inventoryframework.gui.InventoryComponent;
 import com.github.stefvanschie.inventoryframework.gui.type.util.Gui;
 import com.github.stefvanschie.inventoryframework.pane.Pane;
 import com.github.stefvanschie.inventoryframework.pane.util.Slot;
+import lombok.Getter;
+import org.bukkit.NamespacedKey;
 import org.bukkit.event.inventory.InventoryClickEvent;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
+import org.bukkit.inventory.meta.ItemMeta;
+import org.bukkit.plugin.java.JavaPlugin;
 import org.jetbrains.annotations.NotNull;
+import ru.bloodmine.cursedtree.BMCursedTreePlugin;
 
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class StoragePane extends Pane {
+    private final NamespacedKey key = new NamespacedKey(JavaPlugin.getProvidingPlugin(BMCursedTreePlugin.class), "IF-uuid");
 
-    private final List<GuiItem> storage;
+    private final List<ItemStack> storage;
+    private final List<GuiItem> view;
+    @Getter
     private int currentPage = 0;
 
     protected StoragePane(List<ItemStack> items, @NotNull Slot slot, int length, int height, @NotNull Priority priority) {
         super(slot, length, height, priority);
-        storage = items.stream().map(GuiItem::new).collect(Collectors.toList());
-    }
-
-    public void setItems(List<ItemStack> items) {
-        storage.clear();
-        storage.addAll(items.stream().map(GuiItem::new).toList());
+        this.storage = items;
+        this.view = items.stream().map(ItemStack::clone).map(GuiItem::new).collect(Collectors.toList());
     }
 
     public void add(ItemStack item) {
-        storage.add(new GuiItem(item));
+        storage.add(item);
+        view.add(new GuiItem(item.clone()));
     }
 
     public void add(int index, ItemStack item) {
-        storage.add(index, new GuiItem(item));
+        storage.add(index, item);
+        view.add(index, new GuiItem(item.clone()));
     }
 
     public ItemStack get(int index) {
-        return storage.get(index).getItem();
+        return storage.get(index);
     }
 
     public int getPages() {
         int total;
-        if (storage.isEmpty()) total = 1;
-        else total = (storage.size() / (length * height)) + 1;
-        return Math.max(currentPage + 1, total);
+        if (view.isEmpty()) total = 1;
+        else total = (view.size() / (length * height)) + 1;
+        return total;
     }
 
     public void setPage(int page) {
-        if (page < 1) return;
-        currentPage = page-1;
-    }
-
-    public int getCurrentPage() {
-        return currentPage+1;
+        if (page < 0) return;
+        currentPage = page;
     }
 
     @Override
@@ -67,8 +66,8 @@ public class StoragePane extends Pane {
         int visibleW = Math.min(length, maxLength - baseX);   // сколько реально помещается по ширине
         int visibleH = Math.min(height, maxHeight - baseY);   // и по высоте
 
-        for (int i = currentPage * visibleW * visibleH; i < storage.size(); i++) {
-            GuiItem gi = storage.get(i);
+        for (int i = currentPage * visibleW * visibleH; i < view.size(); i++) {
+            GuiItem gi = view.get(i);
             if (gi == null || !gi.isVisible()) continue;
 
             int lx = (i - currentPage * visibleW * visibleH) % length;
@@ -106,20 +105,21 @@ public class StoragePane extends Pane {
 
         event.setCancelled(true);
 
-        if (index >= storage.size()) return true;
-        GuiItem stack = storage.get(index);
+        if (index >= view.size()) return true;
+        ItemStack storageItem = storage.get(index);
 
         // Пытаемся положить в инвентарь игрока (низ)
         Inventory bottom = event.getView().getBottomInventory();
-        ItemStack toMove = stack.getItem().clone();
 
-        Map<Integer, ItemStack> leftover = bottom.addItem(toMove);
+        Map<Integer, ItemStack> leftover = bottom.addItem(storageItem);
         if (leftover.isEmpty()) {
             // всё ушло
-            storage.remove(index);
+            view.remove(index);
         } else {
             // вернулся остаток — оставим его в Storage
-            storage.set(index, new GuiItem(leftover.values().iterator().next()));
+            ItemStack remainder = leftover.values().iterator().next();
+            view.set(index, new GuiItem(remainder.clone()));
+            storage.set(index, remainder);
         }
 
         gui.update();
@@ -128,20 +128,21 @@ public class StoragePane extends Pane {
 
     public void nextPage() {
         currentPage++;
+        if (currentPage >= getPages()) currentPage = 0;
     }
 
     public void prevPage() {
-        if (currentPage == 0) return;
         currentPage--;
+        if (currentPage < 0) currentPage = getPages() - 1;
     }
 
     public @NotNull List<ItemStack> getItemStacks() {
-        return storage.stream().map(GuiItem::getItem).collect(Collectors.toList());
+        return Collections.unmodifiableList(storage);
     }
 
     @Override
     public @NotNull Collection<GuiItem> getItems() {
-        return Collections.unmodifiableList(storage);
+        return Collections.unmodifiableList(view);
     }
 
     @Override
@@ -152,5 +153,6 @@ public class StoragePane extends Pane {
     @Override
     public void clear() {
         storage.clear();
+        view.clear();
     }
 }
